--- a/Website/css/util.css
+++ b/Website/css/util.css
@@ -6,6 +6,12 @@
     margin: 10px;
 }
 
+.card img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 .flex {
     display: flex;
     align-items: center;
