Categories now properly apply filters

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -166,6 +166,10 @@ aside {
     background-color: lightgrey;
 }
 
+.category-selected {
+    background-color: lightgrey;
+}
+
 .links-column {
     display: flex;
     flex-direction: column;
