--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -272,4 +272,17 @@ a {
     text-decoration: none;
     color: inherit;
 }
-
+.address{
+    position: relative;
+    display: inline-block;
+}
+.enterLocationStyle {
+    display: none;
+    position: relative;
+}
+.enterLocationStyle input {
+    color: black;
+    text-decoration: none;
+    display: block;
+  }
+  .show {display:block;}
