--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -102,3 +102,38 @@
     gap: 20px;
     background-color: white;
   }
+  .menu{
+    grid-template-columns: 8% 60% 10% 7% 7%;
+    display: grid;
+    margin-top: 5px;
+    margin-left: 5px;
+    gap: 10px; 
+    justify-content: center;
+  }
+
+  .menu_item_image{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2); 
+    text-align: center;
+  }
+
+  .menu_image{
+    padding: 3px;
+    width: 100%;
+    vertical-align: middle;
+  }
+
+  .menu_item_background {
+    padding: 2px;
+    border: 3px black;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    display : flex;
+    align-items : center;
+    justify-content: center;
+    text-align: center;
+  }
+
+
