--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -25,115 +25,128 @@
     border: 1px solid #dddddd;
     text-align: center;
     padding: 8px;
-  }
-  
-  .add_remove_item {
-    width: 20%;
-    border-radius: 5px;
-  }
- .cart_table tr:nth-child(even) {
-    background-color: #dddddd;
-  }
-
-  .restaurant-info{
-    width: auto;
-    display: grid;
-    gap: 20px;
-    justify-content: left;
-    grid-template-columns:auto auto;
-    margin-bottom: 10px;
-  }
-  .special_img_background{
-      background-color: white;
-      margin: 10px;
-      position: relative;
-      border-radius: 5px;
-      vertical-align: middle;
-  }
-
-  .special_img{
-    height: 190px;
-    position: relative;
-    margin: 20px;
-  
-  }
-
-  .restaurant-description{
-    background-color: white;
-    margin: 10px;
-    position: relative;
-    border-radius: 5px;
-    width: 700px;
-  }
-  .restaurant-description h1{
-    position: relative;
-    margin: 5px;
-    text-align: center;
-    background-color: lightgrey;
 }
+
+.cart_count {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.cart_count p {
+  margin: 0 8px;
+}
+
+.add_remove_item {
+  padding: 3px 4px;
+  border-radius: 5px;
+}
+.cart_table tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.restaurant-info{
+  width: auto;
+  display: grid;
+  gap: 20px;
+  justify-content: left;
+  grid-template-columns:auto auto;
+  margin-bottom: 10px;
+}
+
+.special_img_background{
+  background-color: white;
+  margin: 10px;
+  position: relative;
+  border-radius: 5px;
+  vertical-align: middle;
+}
+
+.special_img{
+  height: 190px;
+  position: relative;
+  margin: 20px;
+}
+
+.restaurant-description{
+  background-color: white;
+  margin: 10px;
+  position: relative;
+  border-radius: 5px;
+  width: 700px;
+}
+
+.restaurant-description h1{
+  position: relative;
+  margin: 5px;
+  text-align: center;
+  background-color: lightgrey;
+}
+
 .rest_information{
-    display: grid;
-    grid-template-columns: auto auto;
+  display: grid;
+  grid-template-columns: auto auto;
 }
 
 .rest_information h2{
-    color: var(--primary-color);
-    text-align: center;
+  color: var(--primary-color);
+  text-align: center;
 }
 
 .grid-hoursOfOperation{
-    width: 100%;
-    display: grid;
-    grid-template-columns: auto auto;
-    padding: 2px;
-    text-align: center;
-  }
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 2px;
+  text-align: center;
+}
 
-  .contact_restaurant {
-    position: relative;
-    text-align:center;
-  }
+.contact_restaurant {
+  position: relative;
+  text-align:center;
+}
 
-  .menu-options{
-    width: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 200px);
-    justify-content: center;
-    gap: 20px;
-    background-color: white;
-  }
-  .menu{
-    grid-template-columns: 8% 60% 10% 7% 7%;
-    display: grid;
-    margin-top: 5px;
-    margin-left: 5px;
-    gap: 10px; 
-    justify-content: center;
-  }
+.menu-options{
+  width: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 200px);
+  justify-content: center;
+  gap: 20px;
+  background-color: white;
+}
 
-  .menu_item_image{
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2); 
-    text-align: center;
-  }
+.menu{
+  grid-template-columns: 8% 60% 10% 7% 7%;
+  display: grid;
+  margin-top: 5px;
+  margin-left: 5px;
+  gap: 10px; 
+  justify-content: center;
+}
 
-  .menu_image{
-    padding: 3px;
-    width: 100%;
-    vertical-align: middle;
-  }
+.menu_item_image{
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2); 
+  text-align: center;
+}
 
-  .menu_item_background {
-    padding: 2px;
-    border: 3px black;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    display : flex;
-    align-items : center;
-    justify-content: center;
-    text-align: center;
-  }
+.menu_image{
+  padding: 3px;
+  width: 100%;
+  vertical-align: middle;
+}
+
+.menu_item_background {
+  padding: 2px;
+  border: 3px black;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  display : flex;
+  align-items : center;
+  justify-content: center;
+  text-align: center;
+}
 
 
