--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -97,6 +97,10 @@ header {
     font-weight: bold;
 }
 
+.username-display {
+    display: inline-block;
+}
+
 @media screen and (max-width: 1400px) {
     .header-box-2 {
         width: 450px;
