--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -1,152 +1,142 @@
 
 .cart{
-    text-align: center;
-    
+  text-align: center;
+  
 }
 .cart_title {
-    display: inline-block;
-    padding: 10px 20px;
-    cursor: pointer;
-    background: var(--primary-color);
-    color: white;
-    font-weight: bold;
-    border: none;
-    border-radius: 5px;
-    text-align: center;
-    width: 100%;
+  display: inline-block;
+  padding: 10px 20px;
+  cursor: pointer;
+  background: var(--primary-color);
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  width: 100%;
 }
 
 
 .cart_table{
-  border-collapse: collapse;
-  width: 100%;
+border-collapse: collapse;
+width: 100%;
 }
 .cart_table td, th {
-    border: 1px solid #dddddd;
-    text-align: center;
-    padding: 8px;
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
 }
 
 .cart_count {
-  display: flex;
-  width: 100%;
-  justify-content: center;
+display: flex;
+width: 100%;
+justify-content: center;
 }
 
 .cart_count p {
-  margin: 0 8px;
+margin: 0 8px;
 }
 
 .add_remove_item {
-  padding: 3px 4px;
-  border-radius: 5px;
+padding: 3px 4px;
+border-radius: 5px;
 }
 .cart_table tr:nth-child(even) {
-  background-color: #dddddd;
+background-color: #dddddd;
 }
 
 .restaurant-info{
-  width: auto;
-  display: grid;
-  gap: 20px;
-  justify-content: left;
-  grid-template-columns:auto auto;
-  margin-bottom: 10px;
-}
-
-.special_img_background{
-  background-color: white;
-  margin: 10px;
-  position: relative;
-  border-radius: 5px;
-  vertical-align: middle;
+width: initial;
+display: grid;
+gap: 20px;
+justify-content: left;
+grid-template-columns:20% 70%;
+margin-bottom: 10px;
 }
 
 .special_img{
-  height: 190px;
-  position: relative;
-  margin: 20px;
+width: 100%;  
+margin: 20px;
 }
 
 .restaurant-description{
-  background-color: white;
-  margin: 10px;
-  position: relative;
-  border-radius: 5px;
-  width: 700px;
+background-color: white;
+margin: 10px;
+position: relative;
+border-radius: 5px;
+width: 100%;
 }
 
 .restaurant-description h1{
-  position: relative;
-  margin: 5px;
-  text-align: center;
-  background-color: lightgrey;
+position: relative;
+margin: 5px;
+text-align: center;
+background-color: lightgrey;
 }
 
 .rest_information{
-  display: grid;
-  grid-template-columns: auto auto;
+display: grid;
+grid-template-columns: auto auto;
 }
 
 .rest_information h2{
-  color: var(--primary-color);
-  text-align: center;
+color: var(--primary-color);
+text-align: center;
 }
 
 .grid-hoursOfOperation{
-  width: 100%;
-  display: grid;
-  grid-template-columns: auto auto;
-  padding: 2px;
-  text-align: center;
+width: 100%;
+display: grid;
+grid-template-columns: auto auto;
+padding: 2px;
+text-align: center;
 }
 
 .contact_restaurant {
-  position: relative;
-  text-align:center;
+position: relative;
+text-align:center;
 }
 
 .menu-options{
-  width: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 200px);
-  justify-content: center;
-  gap: 20px;
-  background-color: white;
+width: auto;
+display: grid;
+grid-template-columns: repeat(auto-fit, 15%);
+justify-content: center;
+gap: 10px;
+background-color: white;
 }
 
 .menu{
-  grid-template-columns: 8% 60% 10% 7% 7%;
-  display: grid;
-  margin-top: 5px;
-  margin-left: 5px;
-  gap: 10px; 
-  justify-content: center;
+grid-template-columns: 8% 60% 10% 7% 7%;
+display: grid;
+margin-top: 5px;
+margin-left: 5px;
+gap: 10px; 
+justify-content: center;
 }
 
 .menu_item_image{
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2); 
-  text-align: center;
+background-color: white;
+border-radius: 5px;
+box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2); 
+text-align: center;
 }
 
 .menu_image{
-  padding: 3px;
-  width: 100%;
-  vertical-align: middle;
+padding: 3px;
+width: 100%;
+vertical-align: middle;
 }
 
 .menu_item_background {
-  padding: 2px;
-  border: 3px black;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-  display : flex;
-  align-items : center;
-  justify-content: center;
-  text-align: center;
+padding: 2px;
+border: 3px black;
+background-color: white;
+border-radius: 5px;
+box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+display : flex;
+align-items : center;
+justify-content: center;
+text-align: center;
 }
-
 
