--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -140,3 +140,21 @@ justify-content: center;
 text-align: center;
 }
 
+.menu_item_background .add-button
+{
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.menu_item_background .add-button:active i{
+  color: black;
+}
+
+
+.menu_item_background button:hover{
+  background-color: #dddddd;
+}
+
