--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -216,8 +216,7 @@ main {
     width: 90px;
     height: 90px;
     position: absolute;
-    top: 20px;
-    left: 20px;
+    bottom: 100px;
     border: 3px solid white;
     border-radius: 50%;
     text-align: center;
