updated font size in add-button (again)

--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -152,7 +152,7 @@ text-align: center;
 
 .menu_item_background .add-button i
 {
-  font-size: 50px;
+  font-size: 300%;
 }
 
 .menu_item_background .add-button:active i{
