--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -107,6 +107,17 @@ background-color: white;
 cursor: pointer;
 }
 
+.menu-options div {
+  justify-self: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.menu-options div:hover {
+  background-color: lightgray;
+  font-weight: bold; 
+}
+
 .menu{
 grid-template-columns: 8% 60% 10% 7% 7%;
 display: grid;
