--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -104,6 +104,7 @@ grid-template-columns: repeat(auto-fit, 15%);
 justify-content: center;
 gap: 10px;
 background-color: white;
+cursor: pointer;
 }
 
 .menu{
