--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -217,12 +217,13 @@ main {
     height: 90px;
     position: absolute;
     bottom: 100px;
-    border: 3px solid white;
+    border: 0px solid white;
     border-radius: 50%;
     text-align: center;
     color: white;
     line-height: 80px;
     background-color: black;
+    box-shadow: rgba(0,0,0,0.8) 0 0 10px;
 }
 
 .card .cardInfo {
