--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -229,6 +229,8 @@ main {
 .card .cardInfo {
     height: 60px;
     width: 100%;
+    box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+    border-radius: 5px;
 }
 
 .card .cardInfo .restName {
