--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -229,8 +229,10 @@ main {
 .card .cardInfo {
     height: 60px;
     width: 100%;
-    box-shadow: rgba(0,0,0,0.8) 0 0 10px;
+    margin-top: 5px;
+    box-shadow: rgba(0,0,0,0.8) 0px 0px 10px;
     border-radius: 5px;
+    background-color: rgb(245, 245, 245);
 }
 
 .card .cardInfo .restName {
@@ -292,4 +294,6 @@ a {
 
 .mg-top {
     margin-top: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
