--- a/Website/css/checkout.css
+++ b/Website/css/checkout.css
@@ -88,6 +88,6 @@
     margin-top: 15px;
     width: 50%;
     justify-content: center;
-    justify-self: ;
+    justify-self: center;
     color: #ff5e00;
 }
