--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -50,11 +50,11 @@ margin-left: 5%;
 }
 
 .restaurant-info{
-  width: initial;
+  width: 100%;
   display: grid;
   gap: 20px;
   justify-content: left;
-  grid-template-columns:20% 70%;
+  grid-template-columns:25% 70%;
   margin-bottom: 10px;
 }
 
@@ -66,7 +66,8 @@ margin-left: 5%;
 
 .restaurant-description{
   background-color: white;
-  margin: 10px;
+  margin-left: 10px;
+  margin-right: 0px;
   position: relative;
   border-radius: 5px;
   width: 100%;
