--- a/Website/css/menu.css
+++ b/Website/css/menu.css
@@ -7,7 +7,7 @@
   display: inline-block;
   padding: 10px;
   background: none;
-  color: black;
+  color: var(--primary-color);
   font-weight: bold;
   border: none;
   width: 100%;
@@ -18,6 +18,11 @@
 border-collapse: collapse;
 width: 90%;
 margin-left: 5%;
+}
+
+.cart_table th 
+{
+  color: var(--primary-color);
 }
 
 .cart_table td, th {
